# CMB-ML

./: .gitignore  README.md  env.yaml  main_analysis_compare.py  main_cmbnncs.py  main_pyilc_analysis.py  main_pyilc_analysis_demo.py  main_pyilc_predict.py  main_pyilc_predict_demo.py  main_sims.py  main_sims_demo.py  pyproject.toml  rename_obs.py
assets/NoiseModel/: README.txt
assets/delta_bandpasses/: README.txt
assets/demo_simulation/: README.txt
cfg/: README.md  config_cmbnncs_unet8.yaml  config_comp_models.yaml  config_demo_dataset.yaml  config_pyilc.yaml  config_pyilc_demo.yaml  config_setup.yaml  config_sim.yaml  config_sim_demo.yaml  config_sim_demo_multirun.yaml
cfg/file_system/: common_fs.yaml
cfg/local_system/: generic_lab.yaml
cfg/pipeline/: README.md  assembly_cmbnncs.yaml  assembly_model_comp.yaml  assembly_pyilc.yaml  assembly_sim.yaml  pipe_model_analysis.yaml  pipe_model_cmbnncs.yaml  pipe_model_compare.yaml  pipe_model_pyilc.yaml  pipe_noise_model.yaml  pipe_sim.yaml  pipe_sim_analysis.yaml
cfg/scenario/: scenario.yaml
cfg/splits/: 1-1.yaml  1-10.yaml  1-100.yaml  2-2.yaml  3-1.yaml  3-140.yaml  all.yaml
cmbml/: __init__.py
cmbml/analysis/: __init__.py  px_statistics.py
cmbml/cmbnncs_local/: __init__.py  dataset.py  handler_npymap.py  unet_wrapper.py
cmbml/core/: __init__.py  asset.py  (+11 more)
demonstrations/: A_hydra_tutorial.ipynb  B_hydra_script_tutorial.py  C_setting_up_local.ipynb  D_getting_dataset_instances.ipynb  __init__.py
get_data/: get_assets.py
paper_figures/: make_component_maps.ipynb  paper_figure_planck_variance.ipynb
(+125 files in other folders)
